.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/shourov/.xmonad/build-x86_64-linux -o /home/shourov/.xmonad/xmonad-x86_64-linux

xmonad.hs:298:16: error: parse error on input ‘=’
    |
298 |       terminal = myTerminal,
    |                ^
